@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2005-03-09 Moved colorbar to figure.Figure to expose it for API developers
+           - JDH
+
 2005-03-09 backend_cairo.py: implemented draw_markers() - SC
 
 2005-03-09 cbook.py: only use enumerate() (the python version) if the builtin
